--- a/QuizGame/Views/Quiz/Add.cshtml
+++ b/QuizGame/Views/Quiz/Add.cshtml
@@ -1,1 +1,23 @@
-﻿
+﻿@* @model AddQuizModel
+@{
+    ViewBag.Title = "Add Quiz";
+}
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+<div class="row">
+    <form method="post">
+        <div class="form-group">
+            <div class="mb-3">
+                <label asp-for="QuestionType"></label>
+                <input asp-for="QuestionType" class="form-control" placeholder="Write your title here...">
+                <span asp-validation-for="@Model.QuestionType" class="small text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Question"></label>
+                <input asp-for="Question" class="form-control" placeholder="Write your question here...">
+                <span asp-validation-for="@Model.Question" class="small text-danger"></span>
+            </div>
+        </div>
+        <input class="btn btn-primary mt-3" type="submit" value="Create" />
+    </form>
+</div> *@
