--- a/QuizGame/Areas/Admin/Views/Home/Index.cshtml
+++ b/QuizGame/Areas/Admin/Views/Home/Index.cshtml
@@ -16,9 +16,8 @@
         <b>all users and authors</b> and
         <b>all quizzes</b> in the system.
     </p> <hr class="my-4">
-    <a asp-area="" asp-controller="House" asp-action="All" class="btn btn-primary btn-lg">All Houses</a>
-    <a asp-area="" asp-controller="House" asp-action="Add" class="btn btn-primary btn-lg">Add House</a>
-    <span> | </span> <a asp-area="Admin" asp-controller="House" asp-action="Mine" class="btn btn-primary btn-lg">My Houses</a>
-    <span> | </span> <a asp-area="Admin" asp-controller="Rent" asp-action="All" class="btn btn-primary btn-lg">All Rents</a>
-    <a asp-area="Admin" asp-controller="User" asp-action="All" class="btn btn-primary btn-lg">All Users</a>
+    <a asp-area="" asp-controller="Quiz" asp-action="All" class="btn btn-primary btn-lg">All Quizzes</a>
+    <a asp-area="" asp-controller="Quiz" asp-action="Add" class="btn btn-primary btn-lg">Add Quiz</a>
+    <span> | </span> <a asp-area="Admin" asp-controller="Quiz" asp-action="Mine" class="btn btn-primary btn-lg">My Houses</a>
+    <a asp-area="Admin" asp-controller="User" asp-action="GetAllUsers" class="btn btn-primary btn-lg">All Users</a>
 </div>
