--- a/QuizGame/Areas/Admin/Views/_ViewImports.cshtml
+++ b/QuizGame/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using QuizGame.Models
 @using QuizGame.Core.Models.Quiz
 @using QuizGame.Core.Models.Statistic
+@using QuizGame.Core.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
