All view updated

--- a/QuizGame/Areas/Admin/Views/Home/Index.cshtml
+++ b/QuizGame/Areas/Admin/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
         <b>create</b>,
         <b>delete</b> and
         <b>edit</b> quizzes.
-        
-    </p> <p class="lead mt-1">
+    </p>
+    <p class="lead mt-1">
         You can also see
         <b>all users and authors</b> and
         <b>all quizzes</b> in the system.
