--- a/QuizGame/Views/Quiz/All.cshtml
+++ b/QuizGame/Views/Quiz/All.cshtml
@@ -21,6 +21,10 @@
                 <td>@quiz.Author</td>
                 <td>@quiz.QuestionType</td>
                 <td>@quiz.Question</td>
+                <td>
+                    <a asp-area="" asp-controller="Quiz" asp-action="Edit" asp-route-id="@quiz.Id" class="btn btn-primary btn-lg">Edit</a>
+                    <a asp-area="" asp-controller="Quiz" asp-action="Delete" asp-route-id="@quiz.Id" class="btn btn-primary btn-lg">Delete</a>
+                </td>
             </tr>
         }
     </tbody>
