--- a/QuizGame/Views/Author/Become.cshtml
+++ b/QuizGame/Views/Author/Become.cshtml
@@ -1,2 +1,2 @@
-﻿<h1 class="text-center">Congratulations!</h1>
+﻿<h1 class="text-center">Congratulations @User.FindFirstValue(ClaimTypes.Name)!</h1>
 <p class="text-center">You've successfully become an author!</p>
