--- a/QuizGame/Views/_ViewImports.cshtml
+++ b/QuizGame/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using QuizGame.Models
 @using QuizGame.Core.Models.Quiz
 @using QuizGame.Core.Models.Statistic
+@using System.Security.Claims
+@using QuizGame.Core.Contracts
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
