Add and All actions implemented in the Trivia controller

--- a/QuizGame/Areas/Admin/Views/Home/Index.cshtml
+++ b/QuizGame/Areas/Admin/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
         <b>all quizzes</b> in the system.
     </p> <hr class="my-4">
     <a asp-area="" asp-controller="Quiz" asp-action="All" class="btn btn-primary btn-lg">All Quizzes</a>
+    <a asp-area="" asp-controller="Trivia" asp-action="All" class="btn btn-primary btn-lg">All Trivias</a>
     <a asp-area="" asp-controller="Quiz" asp-action="Add" class="btn btn-primary btn-lg">Add Quiz</a>
     <a asp-area="Admin" asp-controller="User" asp-action="GetAllUsers" class="btn btn-primary btn-lg">All Users</a>
 </div>
