--- a/QuizGame/Views/_ViewImports.cshtml
+++ b/QuizGame/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using QuizGame
 @using QuizGame.Models
 @using QuizGame.Core.Models.Quiz
+@using QuizGame.Core.Models.Trivia
 @using QuizGame.Core.Models.Statistic
 @using System.Security.Claims
 @using QuizGame.Core.Contracts
