Edit and Delete actions implemented in Trivia controller

--- a/QuizGame/Views/Quiz/All.cshtml
+++ b/QuizGame/Views/Quiz/All.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Quiz Questions";
 }
 
-<h2>Quiz Questions</h2>
+<h2 class ="text-center">@ViewBag.Title</h2>
 
 <table class="table">
     <thead>
