--- a/QuizGame/Views/Trivia/All.cshtml
+++ b/QuizGame/Views/Trivia/All.cshtml
@@ -2,10 +2,10 @@
 @model IList<TriviaDto>
 
 @{
-    ViewBag.Title = "All trivias";
+    ViewBag.Title = "Trivia Comments";
 }
 
-<h2>Quiz Questions</h2>
+<h2 class="text-center">@ViewBag.Title</h2>
 
 <table class="table">
     <thead>
