Statistics controller navigation button added

--- a/QuizGame/Views/Shared/_Layout.cshtml
+++ b/QuizGame/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Author" asp-action="Become">Become Author</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Statistic" asp-action="GetStatistics">View All</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
