--- a/QuizGame/Views/Statistic/GetStatistics.cshtml
+++ b/QuizGame/Views/Statistic/GetStatistics.cshtml
@@ -1,6 +1,8 @@
 ﻿@model StatisticModel
-
-<h2>Statistics</h2>
+@{
+    ViewBag.Title = "Statistics";
+}
+<h2>@ViewBag.Title</h2>
 
 <table class="table">
     <thead>
@@ -11,12 +13,16 @@
     </thead>
     <tbody>
         <tr>
+            <td>Total Authors</td>
+            <td>@Model.TotalAuthors</td>
+        </tr>
+        <tr>
             <td>Total Quizzes</td>
             <td>@Model.TotalQuizzes</td>
         </tr>
         <tr>
-            <td>Total Authors</td>
-            <td>@Model.TotalAuthors</td>
+            <td>Total Trivias</td>
+            <td>@Model.TotalTrivias</td>
         </tr>
     </tbody>
 </table>
