--- a/QuizGame/Views/Home/Index.cshtml
+++ b/QuizGame/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Did u know..?";
 }
 
+<h1 class="text-center">
+    @ViewData["Title"]
+</h1>
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <img src="~/Images/ask-blackboard-356079-900x.jpg" style="width: 75vh"/>
+</div>  
