--- a/QuizGame/Views/Trivia/Add.cshtml
+++ b/QuizGame/Views/Trivia/Add.cshtml
@@ -8,9 +8,9 @@
     <form method="post">
         <div class="form-group">
             <div class="mb-3">
-                <label asp-for="@Model.CategoryId" class="form-label-add-edit">Select Question Type</label>
+                <label asp-for="@Model.CategoryId" class="form-label-add-edit">Select Category</label>
                 <select asp-for="@Model.CategoryId" class="form-control" aria-required="true">
-                    <option disabled selected value="">Select Question Type...</option>
+                    <option disabled selected value="">Select Category...</option>
                     @foreach (var item in Model.Categories)
                     {
                         <option value="@item.Id">@item.Name</option>
