Add Trivia button added to the Adming area Index View

--- a/QuizGame/Areas/Admin/Views/Home/Index.cshtml
+++ b/QuizGame/Areas/Admin/Views/Home/Index.cshtml
@@ -19,5 +19,6 @@
     <a asp-area="" asp-controller="Quiz" asp-action="All" class="btn btn-primary btn-lg">All Quizzes</a>
     <a asp-area="" asp-controller="Trivia" asp-action="All" class="btn btn-primary btn-lg">All Trivias</a>
     <a asp-area="" asp-controller="Quiz" asp-action="Add" class="btn btn-primary btn-lg">Add Quiz</a>
+    <a asp-area="" asp-controller="Trivia" asp-action="Add" class="btn btn-primary btn-lg">Add Trivia</a>
     <a asp-area="Admin" asp-controller="User" asp-action="GetAllUsers" class="btn btn-primary btn-lg">All Users</a>
 </div>
